--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
         <title>Ratatouille</title>
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="57x57" href="/ico/apple-icon-57x57.png" />
-        <link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png" />
-        <link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/ico/apple-icon-114x114.png" />
-        <link rel="apple-touch-icon" sizes="120x120" href="/ico/apple-icon-120x120.png" />
-        <link rel="apple-touch-icon" sizes="144x144" href="/ico/apple-icon-144x144.png" />
-        <link rel="apple-touch-icon" sizes="152x152" href="/ico/apple-icon-152x152.png" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-icon-180x180.png" />
-        <link rel="icon" type="image/png" sizes="192x192" href="/ico/android-icon-192x192.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png" />
-        <link rel="icon" type="image/png" sizes="96x96" href="/ico/favicon-96x96.png" />
-        <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png" />
-        <link rel="manifest" href="/ico/manifest.json" />
+        <link rel="apple-touch-icon" sizes="57x57" href="/assets/ico/apple-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="/assets/ico/apple-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="/assets/ico/apple-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/assets/ico/apple-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="/assets/ico/apple-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="/assets/ico/apple-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="/assets/ico/apple-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="/assets/ico/apple-icon-152x152.png" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/ico/apple-icon-180x180.png" />
+        <link rel="icon" type="image/png" sizes="192x192" href="/assets/ico/android-icon-192x192.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/ico/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="96x96" href="/assets/ico/favicon-96x96.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/ico/favicon-16x16.png" />
+        <link rel="manifest" href="/assets/ico/manifest.json" />
         <meta name="msapplication-TileColor" content="#ffffff" />
-        <meta name="msapplication-TileImage" content="./ico/ms-icon-144x144.png" />
+        <meta name="msapplication-TileImage" content="./assets/ico/ms-icon-144x144.png" />
         <meta name="theme-color" content="#ffffff" />
 
         <!-- Bootstrap -->
@@ -39,7 +39,7 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary header-nav">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/index.html">
-                        <img src="img/ratatouille original.png" alt="Logo" />
+                        <img src="/assets/img/ratatouille original.png" alt="Logo" />
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
 
                     <!-- Profile -->
                     <div class="profile">
-                        <img src="img/ratatouille icon.png" alt="Remy" />
+                        <img src="/assets/img/ratatouille icon.png" alt="Remy" />
                         <span>Remy</span>
                         <i class="bx bx-caret-down"></i>
                     </div>
@@ -81,7 +81,7 @@
                         </a>
                     </div>
 
-                    <img src="img/slide1.webp" alt="Slide 1" />
+                    <img src="/assets/img/slide1.webp" alt="Slide 1" />
                 </div>
 
                 <!-- Slide 2 -->
@@ -95,7 +95,7 @@
                             <button type="button" class="btn btn-light btn-check-now">Check now <i class="bx bx-right-arrow-alt"></i></button>
                         </a>
                     </div>
-                    <img src="img/slide2.webp" alt="Slide 2" />
+                    <img src="/assets/img/slide2.webp" alt="Slide 2" />
                 </div>
 
                 <!-- Slide 3 -->
@@ -109,7 +109,7 @@
                             <button type="button" class="btn btn-light btn-check-now">Check now <i class="bx bx-right-arrow-alt"></i></button>
                         </a>
                     </div>
-                    <img src="img/slide3.webp" alt="Slide 3" />
+                    <img src="/assets/img/slide3.webp" alt="Slide 3" />
                 </div>
             </div>
 
@@ -129,7 +129,7 @@
                 <div class="trending-card-wrapper">
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/trending-now.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/trending-now.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <p class="card-text">Bánh waffle siro bơ</p>
                             </div>
@@ -137,7 +137,7 @@
                     </div>
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/trending-now-2.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/trending-now-2.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <p class="card-text">Bò hầm kiểu Pháp</p>
                             </div>
@@ -145,7 +145,7 @@
                     </div>
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/trending-now-3.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/trending-now-3.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <p class="card-text">Bánh táo crumble</p>
                             </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/trending-now-4.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/trending-now-4.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <p class="card-text">Chocolate mousse.</p>
                             </div>
@@ -169,7 +169,7 @@
                 <div class="card-container">
                     <div class="card text-bg-dark">
                         <a href="#">
-                            <img src="/img/dont-miss-1.webp" class="card-img" alt="Food image" />
+                            <img src="/assets/img/dont-miss-1.webp" class="card-img" alt="Food image" />
                             <div class="card-img-overlay">
                                 <p class="card-subtitle">Bộ sưu tập</p>
                                 <h3 class="card-title">Công thức ớt hầm ngon nhất</h3>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card text-bg-dark">
                         <a href="#">
-                            <img src="/img/dont-miss-2.webp" class="card-img" alt="Food image" />
+                            <img src="/assets/img/dont-miss-2.webp" class="card-img" alt="Food image" />
                             <div class="card-img-overlay">
                                 <p class="card-subtitle">Bộ sưu tập</p>
                                 <h3 class="card-title">Công thức chế biến cà tím đầy sáng tạo</h3>
@@ -187,7 +187,7 @@
                     </div>
                     <div class="card text-bg-dark">
                         <a href="#">
-                            <img src="/img/dont-miss-3.webp" class="card-img" alt="Food image" />
+                            <img src="/assets/img/dont-miss-3.webp" class="card-img" alt="Food image" />
                             <div class="card-img-overlay">
                                 <p class="card-subtitle">Bộ sưu tập</p>
                                 <h3 class="card-title">Công thức nấu gà nhanh và dễ dàng</h3>
@@ -204,7 +204,7 @@
                 <div class="card-container">
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/explore-more.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/explore-more.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <h3 class="card-text">Gà Tikka sốt cà chua Masala</h3>
                             </div>
@@ -213,7 +213,7 @@
 
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/explore-more-2.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/explore-more-2.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <h3 class="card-text">Thịt xông khói chay</h3>
                             </div>
@@ -222,7 +222,7 @@
 
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/explore-more-3.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/explore-more-3.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <h3 class="card-text">Sốt Big Mac chuẩn vị McDonald</h3>
                             </div>
@@ -231,7 +231,7 @@
 
                     <div class="card" style="width: 18rem">
                         <a href="#">
-                            <img src="/img/explore-more-4.webp" class="card-img-top" alt="Food image" />
+                            <img src="/assets/img/explore-more-4.webp" class="card-img-top" alt="Food image" />
                             <div class="card-body">
                                 <p class="card-text">Thịt bò nướng hầm bằng nồi Crock-Pot</p>
                             </div>
@@ -250,7 +250,7 @@
                     <div class="card mb-3 fetured-recipe-collection">
                         <div class="row g-0">
                             <div class="col-md-8">
-                                <img src="/img/romatic-dinner.webp" class="img-fluid rounded-start" alt="Food image" />
+                                <img src="/assets/img/romatic-dinner.webp" class="img-fluid rounded-start" alt="Food image" />
                             </div>
                             <div class="col-md-3">
                                 <div class="card-body">
@@ -273,7 +273,7 @@
                     <div class="row row-cols-1 row-cols-md-4">
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-1.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-1.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Sườn nướng lò</h3>
                                 </div>
@@ -282,7 +282,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-2.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-2.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Thanh phô mai Mozzarella</h3>
                                 </div>
@@ -291,7 +291,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-3.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-3.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Bánh pancake thuần chay 5 phút</h3>
                                 </div>
@@ -300,7 +300,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-4.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-4.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Shakshuka</h3>
                                 </div>
@@ -309,7 +309,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-5.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-5.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Sốt Teriyaki Nhà Hàng</h3>
                                 </div>
@@ -318,7 +318,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-6.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-6.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Chili Skylike - Phiên Bản Mô Phỏng Skyline Chili</h3>
                                 </div>
@@ -327,7 +327,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-7.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-7.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Bánh Chuối Hạt Thơm Ngon & Mềm Ẩm</h3>
                                 </div>
@@ -336,7 +336,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-8.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-8.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Món Ớt Chuông Đoạt Giải</h3>
                                 </div>
@@ -345,7 +345,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-9.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-9.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Mì pasta bông cải xanh và tỏi</h3>
                                 </div>
@@ -354,7 +354,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-10.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-10.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Cánh gà giòn lò nướng</h3>
                                 </div>
@@ -363,7 +363,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-11.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-11.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Nướng bít tết hoàn hảo</h3>
                                 </div>
@@ -372,7 +372,7 @@
 
                         <div class="col">
                             <a href="#" class="card">
-                                <img src="/img/fan-favorite-12.webp" class="card-img-top" alt="Food image" />
+                                <img src="/assets/img/fan-favorite-12.webp" class="card-img-top" alt="Food image" />
                                 <div class="card-body">
                                     <h3 class="card-title">Bánh quế Bỉ ngon nhất</h3>
                                 </div>
@@ -416,7 +416,7 @@
                             <a href="#"><i class="bx bxl-tiktok"></i></a>
                             <a href="#"><i class="bx bxl-youtube"></i></a>
                         </div>
-                        <img src="img/ratatouille original.png" alt="Logo" />
+                        <img src="/assets/img/ratatouille original.png" alt="Logo" />
                     </div>
                 </div>
             </div>
